test/error/MethodBaseNotMethod.fu
public class Base
{
	internal int Foo;
}

public class Test : Base
{
	public static bool Run()
	{
		return base.Foo(); //ERROR: Expected a method
	}
}
